# poetry-example

./: README.md  pyproject.toml  scripts.py
src/my_api/: main.py  test_transform_string.py  transform_string.py
